<resources>
    <string name="app_name">Ambient Noise App</string>
    <string name="title_home">Home</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_alarm">Alarm</string>
    <string name="title_notes">Notes</string>
    <string name="title_settings">Settings</string>
    <string name="text_beach">Beach</string>
    <string name="text_city">Cityscape</string>
    <string name="text_crickets">Crickets</string>
    <string name="text_restaurant">Restaurant</string>
    <string name="text_thunderstorm">Thunderstorm</string>
    <string name="text_white_noise">White Noise</string>
    <string name="text_play_button">Play Button</string>
    <string name="text_light_mode">Light Mode</string>
    <string name="text_dark_mode">Dark Mode</string>
    <string name="text_mode">Switch Themes</string>
    <string name="NULL"> </string>
    <string name="button_stop">Stop All Sounds</string>
    <string name="button_start_timer">Start Timer</string>
    <string name="button_pause_timer">Pause Timer</string>
    <string name="button_credits">Credits</string>
    <string name="button_add">Add New</string>
    <string name="button_delete">Delete Favorite</string>
    <string name="hint_name">Name</string>
    <string name="toast_empty">Name Cannot be Empty!</string>
    <string name="toast_too_long">Name is too Long!</string>
    <string name="toast_no_sound">There are no Sounds Playing!</string>
    <string name="toast_timer_start">Timer has started.</string>
    <string name="toast_timer_up">Timer Up, Stopping Sounds.</string>
    <string name="text_credits">
        App Icon by Chris O\'Brooks ( https://twitter.com/chrisobrooksart )

        This app uses these sounds from freesound:
        \"Thunder Storm Nonstop Thunder\" by hargissssound ( https://freesound.org/s/390398/ ) licensed under CC0 1.0
        \"Gentle ocean waves birdsong and gull.WAV\" by jackmichaelking ( https://freesound.org/s/518637/ ) licensed under CC0 1.0
        \"City Traffic 2.wav\" by inchadney ( https://freesound.org/s/39496/ ) licensed under CCBY 3.0
        \"WhiteNoiseBinauralShort.mp3\" by michaelomreiki ( https://freesound.org/s/267013/ ) licensed under CC0 1.0
        \"Fall Field Crickets - 1\" by naturenutt ( https://freesound.org/s/326251/ ) licensed under CCBY 3.0
        \"MURMULLO RESTAURANT\" by Matias44 ( \"https://freesound.org/s/173920/\" ) licensed under CCBY 3.0

        All Icons inside app from \"material-design-icons\" by google ( \"https://github.com/google/material-design-icons\" ) licensed under Apache License 2.0</string>
</resources>