<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment">

    <ImageButton
        android:id="@+id/buttonTheme"
        style="@style/PlayButtonStyle"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:contentDescription="@string/text_mode"
        android:foregroundGravity="fill_horizontal"
        android:onClick="swapTheme"
        android:scaleType="fitEnd"
        android:src="@drawable/ic_baseline_light_mode_24"
        app:layout_constraintBottom_toTopOf="@+id/buttonStop"
        app:layout_constraintEnd_toStartOf="@+id/textTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/orange_500" />

    <TextView
        android:id="@+id/textTheme"
        style="@style/SoundTitleText"
        android:gravity="start"
        android:text="@string/text_light_mode"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonStop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonTheme"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_stop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonCredits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_credits"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonStop" />

</androidx.constraintlayout.widget.ConstraintLayout>