<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:divider="?android:attr/dividerHorizontal"
            android:showDividers="middle"
            android:stretchColumns="*">

            <TableRow
                android:id="@+id/RowRain"
                style = "@style/TableRowStyle">

                <ImageView
                    android:id="@+id/imageViewRain"
                    android:contentDescription="@string/text_thunderstorm"
                    android:src="@drawable/ic_baseline_cloud_24"
                    app:tint="@color/orange_500"
                    style="@style/AppIconStyle"/>

                <TextView
                    android:id="@+id/textViewRain"
                    android:text="@string/text_thunderstorm"
                    style="@style/SoundTitleText" />

                <ImageButton
                    android:id="@+id/buttonPlayRain"
                    android:contentDescription="@string/text_play_button"
                    android:onClick="controlPlayback"
                    android:src="@drawable/ic_baseline_play_circle_filled_24"
                    app:tint="@color/orange_500"
                    style="@style/PlayButtonStyle" />

            </TableRow>

            <TableRow
                android:id="@+id/RowRainVolume"
                android:gravity="center">

                <SeekBar
                    android:id="@+id/seekBarRain"
                    style="@style/VolumeBar" />

            </TableRow>

            <TableRow
                android:id="@+id/RowCrickets"
                style = "@style/TableRowStyle">

                <ImageView
                    android:id="@+id/imageViewCrickets"
                    android:contentDescription="@string/text_crickets"
                    android:src="@drawable/ic_baseline_bug_report_24"
                    app:tint="@color/orange_500"
                    style="@style/AppIconStyle" />

                <TextView
                    android:id="@+id/textViewCrickets"
                    android:text="@string/text_crickets"
                    style="@style/SoundTitleText" />

                <ImageButton
                    android:id="@+id/buttonPlayCrickets"
                    android:contentDescription="@string/text_play_button"
                    android:onClick="controlPlayback"
                    android:src="@drawable/ic_baseline_play_circle_filled_24"
                    app:tint="@color/orange_500"
                    style="@style/PlayButtonStyle" />

            </TableRow>

            <TableRow
                android:id="@+id/RowCricketsVolume"
                android:gravity="center">

                <SeekBar
                    android:id="@+id/seekBarCrickets"
                    style="@style/VolumeBar"/>

            </TableRow>
        </TableLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>